{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 29,
  "lineage": "758e8825-c3b2-866f-e908-bd4f41e97655",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264317949:loadbalancer/app/cloudproject-alb/6e2c18de5ecbb012",
            "arn_suffix": "app/cloudproject-alb/6e2c18de5ecbb012",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cloudproject-alb-912056700.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264317949:loadbalancer/app/cloudproject-alb/6e2c18de5ecbb012",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cloudproject-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03c84757a9ad6967b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05e1ea33333576485"
              },
              {
                "subnet_id": "subnet-0d5b2c17f732c2ce8"
              }
            ],
            "subnets": [
              "subnet-05e1ea33333576485",
              "subnet-0d5b2c17f732c2ce8"
            ],
            "tags": {
              "Name": "cloudproject-alb"
            },
            "tags_all": {
              "Name": "cloudproject-alb"
            },
            "vpc_id": "vpc-01f8cf2623e90bb7e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security-group.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_subnet.pub_sub_2b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264317949:listener/app/cloudproject-alb/6e2c18de5ecbb012/efaab7f0e58ea323",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264317949:targetgroup/cloudproject-tg/3dbdb1918c74de9a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264317949:listener/app/cloudproject-alb/6e2c18de5ecbb012/efaab7f0e58ea323",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:058264317949:loadbalancer/app/cloudproject-alb/6e2c18de5ecbb012",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.application_load_balancer",
            "module.alb.aws_lb_target_group.alb_target_group",
            "module.security-group.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_subnet.pub_sub_2b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264317949:targetgroup/cloudproject-tg/3dbdb1918c74de9a",
            "arn_suffix": "targetgroup/cloudproject-tg/3dbdb1918c74de9a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264317949:targetgroup/cloudproject-tg/3dbdb1918c74de9a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cloudproject-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047b5b50b7fffdd11",
            "association_id": "eipassoc-0686b4c31d19c6993",
            "domain": "vpc",
            "id": "eipalloc-047b5b50b7fffdd11",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09b8ced5d4ff3389a",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_ip": "10.0.1.9",
            "public_dns": "ec2-52-44-99-125.compute-1.amazonaws.com",
            "public_ip": "52.44.99.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-a"
            },
            "tags_all": {
              "Name": "eip-nat-a"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06192a85188501c98",
            "association_id": "eipassoc-07c004825385dd2ee",
            "domain": "vpc",
            "id": "eipalloc-06192a85188501c98",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0aea77776009b9c43",
            "private_dns": "ip-10-0-2-252.ec2.internal",
            "private_ip": "10.0.2.252",
            "public_dns": "ec2-54-147-233-65.compute-1.amazonaws.com",
            "public_ip": "54.147.233.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-b"
            },
            "tags_all": {
              "Name": "eip-nat-b"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047b5b50b7fffdd11",
            "association_id": "eipassoc-0686b4c31d19c6993",
            "connectivity_type": "public",
            "id": "nat-04dfaed8538393a85",
            "network_interface_id": "eni-09b8ced5d4ff3389a",
            "private_ip": "10.0.1.9",
            "public_ip": "52.44.99.125",
            "subnet_id": "subnet-05e1ea33333576485",
            "tags": {
              "Name": "nat-a"
            },
            "tags_all": {
              "Name": "nat-a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip-nat-a",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06192a85188501c98",
            "association_id": "eipassoc-07c004825385dd2ee",
            "connectivity_type": "public",
            "id": "nat-007467126e631c4d9",
            "network_interface_id": "eni-0aea77776009b9c43",
            "private_ip": "10.0.2.252",
            "public_ip": "54.147.233.65",
            "subnet_id": "subnet-0d5b2c17f732c2ce8",
            "tags": {
              "Name": "nat-b"
            },
            "tags_all": {
              "Name": "nat-b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip-nat-b",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_2b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:route-table/rtb-047c804507de1ee29",
            "id": "rtb-047c804507de1ee29",
            "owner_id": "058264317949",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04dfaed8538393a85",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pri-rt-a"
            },
            "tags_all": {
              "Name": "Pri-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip-nat-a",
            "module.nat.aws_nat_gateway.nat-a",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:route-table/rtb-02c77590caff00550",
            "id": "rtb-02c77590caff00550",
            "owner_id": "058264317949",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-007467126e631c4d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pri-rt-b"
            },
            "tags_all": {
              "Name": "pri-rt-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip-nat-b",
            "module.nat.aws_nat_gateway.nat-b",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_2b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-3a-with-Pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00668456a11e5dd76",
            "route_table_id": "rtb-047c804507de1ee29",
            "subnet_id": "subnet-04d4c6712e8221eac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip-nat-a",
            "module.nat.aws_nat_gateway.nat-a",
            "module.nat.aws_route_table.pri-rt-a",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pri_sub_3a",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-4b-with-Pri-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d584427422604d9e",
            "route_table_id": "rtb-047c804507de1ee29",
            "subnet_id": "subnet-061a1be3b6648adad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip-nat-a",
            "module.nat.aws_nat_gateway.nat-a",
            "module.nat.aws_route_table.pri-rt-a",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pri_sub_4b",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-5a-with-pri-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6389d9a24b2c4d5",
            "route_table_id": "rtb-02c77590caff00550",
            "subnet_id": "subnet-0b14243c6d014edfc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip-nat-b",
            "module.nat.aws_nat_gateway.nat-b",
            "module.nat.aws_route_table.pri-rt-b",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pri_sub_5a",
            "module.vpc.aws_subnet.pub_sub_2b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-6b-with-pri-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0059d1f9c0830bad8",
            "route_table_id": "rtb-02c77590caff00550",
            "subnet_id": "subnet-0bbb9407d4fc76265"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip-nat-b",
            "module.nat.aws_nat_gateway.nat-b",
            "module.nat.aws_route_table.pri-rt-b",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pri_sub_6b",
            "module.vpc.aws_subnet.pub_sub_2b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:security-group/sg-03c84757a9ad6967b",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c84757a9ad6967b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb security group",
            "name_prefix": "",
            "owner_id": "058264317949",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "tags_all": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "client_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:security-group/sg-0ee891eec18e682d8",
            "description": "enable http/https access on port 80 for elb sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee891eec18e682d8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03c84757a9ad6967b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "client_sg",
            "name_prefix": "",
            "owner_id": "058264317949",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Client_sg"
            },
            "tags_all": {
              "Name": "Client_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security-group.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:security-group/sg-0a0d2b6f40c2d76aa",
            "description": "enable mysql access on port 3305 from client-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0d2b6f40c2d76aa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "mysql access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ee891eec18e682d8"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "058264317949",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database_sg"
            },
            "tags_all": {
              "Name": "database_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security-group.aws_security_group.alb_sg",
            "module.security-group.aws_security_group.client_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:internet-gateway/igw-0e755a774fb59244b",
            "id": "igw-0e755a774fb59244b",
            "owner_id": "058264317949",
            "tags": {
              "Name": "cloudproject-igw"
            },
            "tags_all": {
              "Name": "cloudproject-igw"
            },
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:route-table/rtb-03e94bada0bd271f2",
            "id": "rtb-03e94bada0bd271f2",
            "owner_id": "058264317949",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e755a774fb59244b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-route"
            },
            "tags_all": {
              "Name": "Public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0299ede14f4a80ee3",
            "route_table_id": "rtb-03e94bada0bd271f2",
            "subnet_id": "subnet-05e1ea33333576485"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_2b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001431f39ff028b71",
            "route_table_id": "rtb-03e94bada0bd271f2",
            "subnet_id": "subnet-0d5b2c17f732c2ce8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.pub_sub_2b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:subnet/subnet-04d4c6712e8221eac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d4c6712e8221eac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264317949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-3a"
            },
            "tags_all": {
              "Name": "pri-sub-3a"
            },
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_4b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:subnet/subnet-061a1be3b6648adad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061a1be3b6648adad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264317949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-4b"
            },
            "tags_all": {
              "Name": "pri-sub-4b"
            },
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_5a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:subnet/subnet-0b14243c6d014edfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b14243c6d014edfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264317949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-5a"
            },
            "tags_all": {
              "Name": "pri-sub-5a"
            },
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_6b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:subnet/subnet-0bbb9407d4fc76265",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbb9407d4fc76265",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264317949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-6b"
            },
            "tags_all": {
              "Name": "pri-sub-6b"
            },
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:subnet/subnet-05e1ea33333576485",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e1ea33333576485",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264317949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_1a",
              "Type": "public"
            },
            "tags_all": {
              "Name": "pub_sub_1a",
              "Type": "public"
            },
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:subnet/subnet-0d5b2c17f732c2ce8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5b2c17f732c2ce8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264317949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_2b",
              "Type": "public"
            },
            "tags_all": {
              "Name": "pub_sub_2b",
              "Type": "public"
            },
            "vpc_id": "vpc-01f8cf2623e90bb7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264317949:vpc/vpc-01f8cf2623e90bb7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0179d24e88c1595c2",
            "default_route_table_id": "rtb-09227e2adddcfd490",
            "default_security_group_id": "sg-0369f42ff3c6011d6",
            "dhcp_options_id": "dopt-0385c4d97d0807408",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f8cf2623e90bb7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09227e2adddcfd490",
            "owner_id": "058264317949",
            "tags": {
              "Name": "cloudproject-vpc"
            },
            "tags_all": {
              "Name": "cloudproject-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}